--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
+@import 'src/assets/variables';
+
 *,
 *:after,
 *:before {
   box-sizing: border-box;
   margin: 0;
+  color: $white;
 }
 
 html {
@@ -15,3 +18,6 @@ body {
   width: 100%;
   margin: 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
