--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,12 +1,15 @@
 $primary-color: #243763;
 $accent-color: #FF6E31;
 $background-color: #FFEBB7;
+$cancel-color: #7c7c7c;
 $white: #ffffff;
 $black: #000000;
 
 $offset-small: 0.3rem;
 $offset-medium: 0.6rem;
 $offset-large: 1.2rem;
-$offset-x-large: 2.4rem
+$offset-x-large: 2.4rem;
+
+$header-height: 5rem;
 
 
