CarN - Custom Theme and Add number logic

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="dashboard-container">
   <mat-card *ngFor="let carNumber of carNumbers" class="dashboard-card">
     <mat-card-header class="dashboard-card-header">
-      <mat-card-title>{{ carNumber.number }}</mat-card-title>
+      <mat-card-title class="dashboard-card-text">{{ carNumber.number }}</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
-      <p>Holder: {{ carNumber.holder }}</p>
-      <p>Registered on: {{ carNumber.registerDate | date : "mediumDate" }}</p>
+      <p class="dashboard-card-text">Holder: {{ carNumber.holder }}</p>
+      <p class="dashboard-card-text">Registered on: {{ carNumber.registerDate | date : "mediumDate" }}</p>
     </mat-card-content>
   </mat-card>
 </div>
