--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -17,6 +17,10 @@
       .dashboard-card-header {
         margin-bottom: $offset-medium;
       }
+
+      .dashboard-card-text {
+        color: $white;
+      }
     }
   }
 }
