--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
   <span class="app-name">CarN</span>
-  <button mat-icon-button (click)="onAddNumber()"><mat-icon>add_circle</mat-icon></button>
+  <button mat-icon-button (click)="onAddNumber()" color="accent"><mat-icon>add_circle</mat-icon></button>
 </div>
