--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,6 @@
 *:before {
   box-sizing: border-box;
   margin: 0;
-  color: $white;
 }
 
 html {
@@ -21,3 +20,7 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button:disabled {
+  opacity: 40%;
+}
