--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,33 @@
 <div class="dashboard-container">
   <mat-card *ngFor="let carNumber of carNumbers" class="dashboard-card">
     <mat-card-header class="dashboard-card-header">
-      <mat-card-title class="dashboard-card-text">{{ carNumber.number }}</mat-card-title>
+      <mat-card-title class="dashboard-card-text">{{
+        carNumber.number
+      }}</mat-card-title>
+      <div class="dashboard-card-button-block">
+        <button
+          mat-icon-button
+          class="dashboard-card-edit-button"
+          (click)="onEdit(carNumber)"
+        >
+          <mat-icon class="dashboard-card-edit-icon">edit</mat-icon>
+        </button>
+
+        <button
+          mat-icon-button
+          class="dashboard-card-edit-button"
+          (click)="onDelete(carNumber)"
+        >
+          <mat-icon class="dashboard-card-edit-icon">delete</mat-icon>
+        </button>
+      </div>
     </mat-card-header>
 
     <mat-card-content>
       <p class="dashboard-card-text">Holder: {{ carNumber.holder }}</p>
-      <p class="dashboard-card-text">Registered on: {{ carNumber.registerDate | date : "mediumDate" }}</p>
+      <p class="dashboard-card-text">
+        Registered on: {{ carNumber.registerDate | date : "mediumDate" }}
+      </p>
     </mat-card-content>
   </mat-card>
 </div>
