--- a/src/app/shared/components/add-number-modal/add-number.component.scss
+++ b/src/app/shared/components/add-number-modal/add-number.component.scss
@@ -4,6 +4,7 @@
   .body-container {
     display: flex;
     flex-direction: column;
+    gap: $offset-medium;
     padding: $offset-large;
 
     .body-input {
