--- a/gui/src/app/pages/dashboard/dashboard.component.scss
+++ b/gui/src/app/pages/dashboard/dashboard.component.scss
@@ -7,7 +7,7 @@
     gap: $offset-large;
     height: calc(100vh - #{$header-height});
     background-color: $background-color;
-    padding: $offset-large 0;
+    padding: $offset-large;
 
     .dashboard-card {
       width: max-content;
