--- a/gui/src/app/pages/error-page/error-page.component.html
+++ b/gui/src/app/pages/error-page/error-page.component.html
@@ -1,1 +1,1 @@
-<p>error works!</p>
+<p class="error-page-message">Oops! Something went wrong <a href="/"><mat-icon class="go-home-icon">home</mat-icon></a></p>
