--- a/gui/src/app/pages/dashboard/dashboard.component.html
+++ b/gui/src/app/pages/dashboard/dashboard.component.html
@@ -1,33 +1,44 @@
 <div class="dashboard-container">
-  <mat-card *ngFor="let carNumber of carNumbers" class="dashboard-card">
-    <mat-card-header class="dashboard-card-header">
-      <mat-card-title class="dashboard-card-text">{{
-        carNumber.number
-      }}</mat-card-title>
-      <div class="dashboard-card-button-block">
-        <button
-          mat-icon-button
-          class="dashboard-card-edit-button"
-          (click)="onEdit(carNumber)"
-        >
-          <mat-icon class="dashboard-card-edit-icon">edit</mat-icon>
-        </button>
+  <ng-container *ngIf="carNumbersLoadingStatus?.loaded && carNumbers?.length; else notLoaded">
+      <mat-card *ngFor="let carNumber of carNumbers" class="dashboard-card">
+        <mat-card-header class="dashboard-card-header">
+          <mat-card-title class="dashboard-card-text">{{
+            carNumber.number
+            }}</mat-card-title>
+          <div class="dashboard-card-button-block">
+            <button
+              mat-icon-button
+              class="dashboard-card-edit-button"
+              (click)="onEdit(carNumber)"
+            >
+              <mat-icon class="dashboard-card-edit-icon">edit</mat-icon>
+            </button>
 
-        <button
-          mat-icon-button
-          class="dashboard-card-edit-button"
-          (click)="onDelete(carNumber)"
-        >
-          <mat-icon class="dashboard-card-edit-icon">delete</mat-icon>
-        </button>
-      </div>
-    </mat-card-header>
+            <button
+              mat-icon-button
+              class="dashboard-card-edit-button"
+              (click)="onDelete(carNumber)"
+            >
+              <mat-icon class="dashboard-card-edit-icon">delete</mat-icon>
+            </button>
+          </div>
+        </mat-card-header>
 
-    <mat-card-content>
-      <p class="dashboard-card-text">Holder: {{ carNumber.holder }}</p>
-      <p class="dashboard-card-text">
-        Registered on: {{ carNumber.registerDate | date : "mediumDate" }}
-      </p>
-    </mat-card-content>
-  </mat-card>
+        <mat-card-content>
+          <p class="dashboard-card-text">Holder: {{ carNumber.holder }}</p>
+          <p class="dashboard-card-text">
+            Registered on: {{ carNumber.registerDate | date : "mediumDate" }}
+          </p>
+        </mat-card-content>
+      </mat-card>
+  </ng-container>
+
+  <ng-template #notLoaded>
+    <mat-spinner *ngIf="carNumbersLoadingStatus?.loading || !carNumbersLoadingStatus; else noData"></mat-spinner>
+
+    <ng-template #noData>
+      <mat-icon class="no-data-icon">block</mat-icon>
+      <span class="no-data-text">No Data</span>
+    </ng-template>
+  </ng-template>
 </div>
