CarN - Change theme

--- a/gui/src/assets/variables.scss
+++ b/gui/src/assets/variables.scss
@@ -1,6 +1,6 @@
-$primary-color: #243763;
-$accent-color: #FF6E31;
-$background-color: #FFEBB7;
+$primary-color: #c7bc80;
+$accent-color: #65647C;
+$background-color: #F1D3B3;
 $cancel-color: #7c7c7c;
 $white: #ffffff;
 $black: #000000;
