--- a/gui/src/app/shared/components/header/header.component.html
+++ b/gui/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" [class.mat-elevation-z8]="true">
   <span class="app-name">CarN</span>
   <button mat-icon-button (click)="onAddNumber()" color="accent"><mat-icon>add_circle</mat-icon></button>
 </div>
