CarN - Add modal pristine validation

--- a/gui/src/app/shared/components/add-number-modal/add-number.component.html
+++ b/gui/src/app/shared/components/add-number-modal/add-number.component.html
@@ -30,7 +30,7 @@
   <button
     mat-button
     class="add-action-button"
-    [disabled]="!formGroup.valid"
+    [disabled]="!formGroup.valid || formGroup.pristine"
     (click)="onSubmit()"
   >
     {{ isEdit ? "Edit" : "Add" }}
