--- a/gui/src/assets/variables.scss
+++ b/gui/src/assets/variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #c7bc80;
-$accent-color: #65647C;
+$accent-color: #504f65;
 $background-color: #F1D3B3;
 $cancel-color: #7c7c7c;
 $white: #ffffff;
