--- a/gui/src/app/pages/dashboard/dashboard.component.scss
+++ b/gui/src/app/pages/dashboard/dashboard.component.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-grow: 1;
     flex-wrap: wrap;
+    align-content: start;
     justify-content: center;
     gap: $offset-large;
     overflow: auto;
@@ -21,8 +22,12 @@
       color: $accent-color;
     }
 
-    .spinner {
-      align-self: center;
+    .spinner-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
     }
 
     .no-data-text {
