--- a/gui/src/app/shared/components/header/header.component.html
+++ b/gui/src/app/shared/components/header/header.component.html
@@ -1,4 +1,12 @@
 <div class="header" [class.mat-elevation-z8]="true">
   <span class="app-name">CarN</span>
-  <button mat-icon-button (click)="onAddNumber()" color="accent"><mat-icon>add_circle</mat-icon></button>
+  <button
+    mat-icon-button
+    (click)="onAddNumber()"
+    color="accent"
+    matTooltip="Add Car Number"
+    matTooltipShowDelay="1000"
+  >
+    <mat-icon>add_circle</mat-icon>
+  </button>
 </div>
